--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment 01 </title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container banner ">
+            <div class="banner-text">
+                <h1>Happy New Year</h1>
+                <p>New Year Party Celebration</p>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
