midnight party complete

--- a/index.html
+++ b/index.html
@@ -17,5 +17,30 @@
             </div>
         </div>
     </header>
+    <section id="categories">
+        <div class="container discount">
+            <div class="section-heading">
+                <h2>65% OFF</h2>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+            </div>
+            <div class="section-img">
+                <div class="new-img">
+                    <img src="../b9 a1/resources/NewYearPhoto.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="midnight">
+        <div class="midnight-img">
+            <div class="welcom-heading">
+                <h2>Welcome to midnight party</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+                <h3>Join Now</h3>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
