--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
             </div>
         </div>
     </section>
+    <section id="schedule">
+        <div class="container time ">
+            <div class="schedule-text">
+                <p ><span>Place:</span>  New Park Hotel </p>
+                <p ><span>Date:</span> 31 December Night 2023</p>
+                <p ><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+            </div>
+            <div class="button">
+                <p>Join Now</p>
+            </div>
+        </div>
+    </section>
+    <section id="packege"></section>
+
 </body>
 
 </html>
