--- a/index.html
+++ b/index.html
@@ -44,16 +44,34 @@
     <section id="schedule">
         <div class="container time ">
             <div class="schedule-text">
-                <p ><span>Place:</span>  New Park Hotel </p>
-                <p ><span>Date:</span> 31 December Night 2023</p>
-                <p ><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+                <p><span>Place:</span> New Park Hotel </p>
+                <p><span>Date:</span> 31 December Night 2023</p>
+                <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
             </div>
             <div class="button">
                 <p>Join Now</p>
             </div>
         </div>
     </section>
-    <section id="packege"></section>
+    <section id="packege">
+        <div class="container comming">
+            <div>
+                <h4>NEW BEST OFFER</h4>
+                <h2>Coming Soon</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="ellipse-img">
+                <img src="../b9 a1/resources/Ellipse 1.png" alt="">
+            </div>
+            <div>
+                <h3>2024</h3>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+                    <img src="../b9 a1/resources/Group 96.png" alt="">
+            </div>
+        </div>
+    </section>
 
 </body>
 
