--- a/index.html
+++ b/index.html
@@ -68,7 +68,27 @@
                 <h3>2024</h3>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
                     sodales risus ut pellentesque vel euismod. </p>
-                    <img src="../b9 a1/resources/Group 96.png" alt="">
+                <img src="../b9 a1/resources/Group 96.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="portfolio">
+        <div class="container awesome">
+            <div>
+                <h4>THE BEST GIFTS</h4>
+                <h2>Our Awesome Portfolio</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.  </p>
+            </div>
+            <div class="portfolio-img-1">
+                <img src="../b9 a1/resources/Rectangle 3.png" alt="">
+                <img src="../b9 a1/resources/Rectangle 4.png" alt="">
+                <img src="../b9 a1/resources/Rectangle 5.png" alt="">
+                
+            </div>
+            <div class="portfolio-img-2">
+                <img src="../b9 a1/resources/Rectangle 6.png" alt="">  
+                <img src="../b9 a1/resources/Rectangle 7.png" alt="">  
+                <img src="../b9 a1/resources/Rectangle 8.png" alt="">  
             </div>
         </div>
     </section>
