--- a/index.html
+++ b/index.html
@@ -77,21 +77,56 @@
             <div>
                 <h4>THE BEST GIFTS</h4>
                 <h2>Our Awesome Portfolio</h2>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.  </p>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <div class="portfolio-img-1">
-                <img src="../b9 a1/resources/Rectangle 3.png" alt="">
-                <img src="../b9 a1/resources/Rectangle 4.png" alt="">
-                <img src="../b9 a1/resources/Rectangle 5.png" alt="">
-                
-            </div>
-            <div class="portfolio-img-2">
-                <img src="../b9 a1/resources/Rectangle 6.png" alt="">  
-                <img src="../b9 a1/resources/Rectangle 7.png" alt="">  
-                <img src="../b9 a1/resources/Rectangle 8.png" alt="">  
+            <div class="portfolio-img">
+                <div class="portfolio-img-1">
+                    <img src="../b9 a1/resources/Rectangle 3.png" alt="">
+                    <img src="../b9 a1/resources/Rectangle 4.png" alt="">
+                    <img src="../b9 a1/resources/Rectangle 5.png" alt="">
+
+                </div>
+                <div class="portfolio-img-2">
+                    <img src="../b9 a1/resources/Rectangle 6.png" alt="">
+                    <img src="../b9 a1/resources/Rectangle 7.png" alt="">
+                    <img src="../b9 a1/resources/Rectangle 8.png" alt="">
+                </div>
             </div>
         </div>
     </section>
+    <section id="newsletter">
+        <div class="container subscribe">
+            <div>
+                <img src="../b9 a1/resources/Group 61.png" alt="">
+                <h3> Subscribe Newsletter</h3>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <form action="">
+                    <input placeholder="user@gmail.com"  type="email">
+                    <button>Subscribe</button>
+                </form>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        div <div class="footer-section">
+            <div class="des">
+                <div>
+                    <p>44, Big Building Roosevelt Street
+                        Beach Gardens Florida 33410</p>
+                </div>
+                <div>
+                    <ul>
+                        <li>+00 123 584 124</li>
+                        <li>www.website.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
 
 </body>
 
