--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="section-img">
                 <div class="new-img">
-                    <img src="../b9 a1/resources/NewYearPhoto.png" alt="">
+                    <img src="../b9a1/resources/NewYearPhoto.png" alt="">
                 </div>
             </div>
         </div>
@@ -100,9 +100,10 @@
             <div>
                 <img src="../b9 a1/resources/Group 61.png" alt="">
                 <h3> Subscribe Newsletter</h3>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
                 <form action="">
-                    <input placeholder="user@gmail.com"  type="email">
+                    <input placeholder="user@gmail.com" type="email">
                     <button>Subscribe</button>
                 </form>
             </div>
@@ -110,7 +111,7 @@
 
     </section>
     <footer>
-        div <div class="footer-section">
+        <div class="footer-section">
             <div class="des">
                 <div>
                     <p>44, Big Building Roosevelt Street
@@ -124,8 +125,6 @@
                 </div>
             </div>
         </div>
-
-
     </footer>
 
 </body>
